# jtop

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: app.rs  config.rs  handler.rs  lib.rs  main.rs  tui.rs  ui.rs
src/config/: color.rs  theme.rs
src/ui/: chart_wrapper.rs  cpus_bars.rs  cpus_chart.rs  disks.rs  processes.rs
