[package]
name = "jwtop"
version = "0.1.0"
authors = ["Jerzy Wilczek <jerzykwilczek@gmail.com>"]
license = "MIT"
edition = "2021"

[dependencies]
crossterm = "0.27.0"
fuzzy-matcher = "0.3.7"
regex = "1.9.3"
sysinfo = { version = "0.29.7", default-features = false }
systemstat = "0.2.3"
tui = { package = "ratatui", version = "0.22.0" }
