[package]
name = "jwtop"
version = "0.1.1"
authors = ["Jerzy Wilczek <jerzykwilczek@gmail.com>"]
license = "MIT"
edition = "2021"
description = "a simple TUI resource monitor inspired by gtop and bottom"
readme = "README.md"
homepage = "https://github.com/jerzywilczek/jwtop"
repository = "https://github.com/jerzywilczek/jwtop"
keywords = ["monitoring", "cli", "top", "tui"]
categories = ["command-line-utilities"]

[dependencies]
crossterm = "0.27.0"
fuzzy-matcher = "0.3.7"
regex = "1.9.3"
sysinfo = { version = "0.29.7", default-features = false }
systemstat = "0.2.3"
tui = { package = "ratatui", version = "0.22.0" }
