[package]
name = "jwtop"
version = "0.2.2"
authors = ["Jerzy Wilczek <jerzykwilczek@gmail.com>"]
license = "MIT"
edition = "2021"
description = "a simple TUI resource monitor inspired by gtop and bottom"
readme = "README.md"
homepage = "https://github.com/jerzywilczek/jwtop"
repository = "https://github.com/jerzywilczek/jwtop"
keywords = ["monitoring", "cli", "top", "tui"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.4.6", features = ["derive"] }
crossterm = "0.27.0"
directories = "5.0.1"
fuzzy-matcher = "0.3.7"
regex = "1.9.3"
serde = { version = "1.0.188", features = ["derive"] }
sysinfo = { version = "0.29.7", default-features = false }
systemstat = "0.2.3"
toml = "0.8.2"
tui = { package = "ratatui", version = "0.23.0" }
